# Author: Dominik Harmim <harmim6@gmail.com>

CMAKE_MINIMUM_REQUIRED(VERSION 3.17)

PROJECT(kry)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_FLAGS_DEBUG
	"${CMAKE_CXX_FLAGS} -W -Wall -Wextra -Werror -pedantic -g -D DEBUG")

INCLUDE(FindGMP.cmake)
INCLUDE_DIRECTORIES(${GMP_INCLUDES})

ADD_EXECUTABLE(${PROJECT_NAME} ${PROJECT_NAME}.cpp)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${GMP_LIBRARIES} m)
